@@ -1,4 +1,4 @@
-FROM openjdk:11.0.8-jdk as build
+FROM openjdk:15.0.1-jdk-slim as build
 
 WORKDIR application
 COPY . .
@@ -6,12 +6,13 @@ RUN ./gradlew --no-daemon bootJar
 RUN cp build/libs/mms*.jar app.jar
 RUN java -Djarmode=layertools -jar app.jar extract
 
-FROM openjdk:11.0.8-jdk
+FROM openjdk:15.0.1-jdk-slim
 WORKDIR application
+RUN apt-get update && apt-get install -y procps
 COPY --from=build application/dependencies/ ./
 COPY --from=build application/spring-boot-loader/ ./
 COPY --from=build application/snapshot-dependencies/ ./
 COPY --from=build application/application/ ./
-ENV JAVA_TOOL_OPTIONS "-XX:MaxRAMPercentage=90.0 -XX:+PrintFlagsFinal -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:+UseStringDeduplication"
-ENTRYPOINT ["java", "-Djdk.tls.client.protocols=TLSv1", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "org.springframework.boot.loader.JarLauncher"]
+ENV JDK_JAVA_OPTIONS "-XX:MaxRAMPercentage=90.0 -XX:+PrintFlagsFinal -XX:+UseZGC"
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "org.springframework.boot.loader.JarLauncher"]
 EXPOSE 8080
